Sema: Diagnose invalid 'self.init' delegation where 'self' is an archetype

This is a corner case but would previously lead to a compiler crash
or miscompile.

Fixes <rdar://problem/21991470>, <https://bugs.swift.org/browse/SR-5022>.